fixed alignment of St. Joseph img

--- a/protected/s40df39gj/style.css
+++ b/protected/s40df39gj/style.css
@@ -95,5 +95,4 @@ p {
   height: 64px;
   width: 48px;
   position: relative;
-  left: -12px;
 }
